[project]
name = "instaregretam"
version = "1.0.0"
description = "Mass unlike your Instagram posts safely"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "instagrapi==2.8.13",
    "ensta==5.2.9",
    "tqdm==4.67.1",
    "colorama==0.4.6",
    "pyotp==2.9.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
instaregretam = "instaregretam:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["instaregretam"]
